# MOOZY

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  index.html  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: encode.md  stage_1.md  stage_2.md
moozy/: __main__.py  encoding.py  hf_hub.py
moozy/cli/: _types.py  encode.py  main.py
moozy/cli/train/: __init__.py  _stage1.py  _stage2.py
moozy/config/: data.py  model.py  stage1.py  stage2.py  tasks.py  training.py
moozy/data/features/: __init__.py  grid.py  index.py  io.py  token_cap.py  transforms.py
moozy/data/stage1/: __init__.py  collate.py  crops.py  dataset.py  loader.py  masking.py  transforms.py  types.py
moozy/data/stage2/: __init__.py  batching.py  dataset.py  loader.py  transforms.py  types.py
moozy/models/: case_transformer.py  encoder.py  factory.py  heads.py  layers.py  moozy_slide_encoder.py  serialization.py  stage1_encoding.py  stage1_ssl.py  stage2_encoding.py  stage2_supervised.py  stage2_tasks.py  variants.py
moozy/tasks/: __init__.py  coverage.py  loader.py  matrices.py  resolution.py  splits.py  survival.py
moozy/training/: __init__.py  logging.py  metrics.py  optimization.py  runtime.py
moozy/training/callbacks/: __init__.py  checkpoint.py  logging.py
moozy/training/engine/: __init__.py  base.py  stage1.py  stage2.py
moozy/training/loss/: __init__.py  classification.py  distillation.py  survival.py
moozy/training/runners/: __init__.py  stage1.py  stage2.py
scripts/: train_stage1.sh  train_stage2.sh
slurm/: inference.sh  multi_gpu.sh  multi_node.sh  single_gpu.sh
static/css/: index.css
static/js/: index.js
